[gd_scene load_steps=21 format=3 uid="uid://c1hsnwubt7hly"]

[ext_resource type="Script" uid="uid://c76xy45r4sir6" path="res://cenas/fases/fase_curupira/curupira/curupira.gd" id="1_ppvy8"]
[ext_resource type="PackedScene" uid="uid://jucx0ucitr32" path="res://cenas/fases/fase_curupira/assets/projeteis/jogador/bala_jogador.tscn" id="2_3rpbx"]
[ext_resource type="Texture2D" uid="uid://cs8itsgxbx1wn" path="res://cenas/fases/fase_curupira/curupira/sprites/curupira.png" id="3_3rpbx"]
[ext_resource type="AudioStream" uid="uid://ya6st88wj8gs" path="res://cenas/fases/fase_curupira/assets/sons/curupira/grito-sfx.mp3" id="4_b30f6"]
[ext_resource type="AudioStream" uid="uid://dxal2j3o2weyd" path="res://cenas/fases/fase_curupira/assets/sons/curupira/vitoria-sfx.mp3" id="5_vxmjy"]
[ext_resource type="AudioStream" uid="uid://bc0whabs0mjgx" path="res://cenas/fases/fase_curupira/assets/sons/curupira/derrota.mp3" id="6_r34aa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vxmjy"]
size = Vector2(72, 120)

[sub_resource type="Curve" id="Curve_r34aa"]
_limits = [-360.0, 360.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 360), 0.0, 0.0, 0, 0, Vector2(2e-05, 360), 0.0, 0.0, 0, 0, Vector2(1, -360), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_vxmjy"]
_limits = [-360.0, 360.0, 0.0, 1.0]
_data = [Vector2(0, 360), 0.0, 0.0, 0, 0, Vector2(1, 343.82), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_odie2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_odie2"]
offsets = PackedFloat32Array(0, 0.986928)
colors = PackedColorArray(1, 0.584314, 0, 1, 1, 1, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_r34aa"]
atlas = ExtResource("3_3rpbx")
region = Rect2(0, 96, 30, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_vm3xx"]
atlas = ExtResource("3_3rpbx")
region = Rect2(0, 32, 30, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_b30f6"]
atlas = ExtResource("3_3rpbx")
region = Rect2(62, 62, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_050jj"]
atlas = ExtResource("3_3rpbx")
region = Rect2(0, 62, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_odie2"]
atlas = ExtResource("3_3rpbx")
region = Rect2(104, 0, 16, 29)

[sub_resource type="SpriteFrames" id="SpriteFrames_lav0i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r34aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vm3xx")
}],
"loop": true,
"name": &"derrota",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b30f6")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b30f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_050jj")
}],
"loop": false,
"name": &"lan√ßar",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_odie2")
}],
"loop": true,
"name": &"vitoria",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_3rpbx"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_3rpbx"]
metadata/_snap_enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3rpbx"]
size = Vector2(72, 120)

[node name="Curupira" type="CharacterBody2D"]
process_mode = 3
script = ExtResource("1_ppvy8")
bala_cena = ExtResource("2_3rpbx")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_vxmjy")

[node name="particulas_vitoria" type="CPUParticles2D" parent="."]
emitting = false
amount = 90
emission_shape = 1
emission_sphere_radius = 71.76
gravity = Vector2(0, -150)
angular_velocity_min = 5.0
angular_velocity_max = 250.0
angular_velocity_curve = SubResource("Curve_r34aa")
angle_min = 5.0
angle_max = 15.0
angle_curve = SubResource("Curve_vxmjy")
scale_amount_min = 2.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_odie2")
color_ramp = SubResource("Gradient_odie2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-8, 0)
scale = Vector2(4.12903, 4.12903)
sprite_frames = SubResource("SpriteFrames_lav0i")
animation = &"idle"
speed_scale = 2.0

[node name="particulas_sangue" type="CPUParticles2D" parent="."]
rotation = -1.57079
emitting = false
amount = 5000
emission_shape = 3
emission_rect_extents = Vector2(20, 20)
gravity = Vector2(0, -980)
initial_velocity_min = 461.54
initial_velocity_max = 1000.0
linear_accel_max = 100.0
radial_accel_max = 100.0
tangential_accel_max = 100.0
scale_amount_min = 2.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_3rpbx")
color = Color(1, 0, 0, 1)
color_initial_ramp = SubResource("Gradient_3rpbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_3rpbx")

[node name="sons" type="Node" parent="."]

[node name="audio_grito" type="AudioStreamPlayer" parent="sons"]
stream = ExtResource("4_b30f6")

[node name="audio_vitoria" type="AudioStreamPlayer" parent="sons"]
stream = ExtResource("5_vxmjy")

[node name="audio_derrota" type="AudioStreamPlayer" parent="sons"]
stream = ExtResource("6_r34aa")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
